# delivery_service

./: .env.db  .env.example  .gitignore  Dockerfile  README.md  _Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: README.md  gunicorn_config.py
backend/admins/: models.py
backend/admins/migrations/: 0001_initial.py  0002_category_organization_alter_externalmenu_options_and_more.py  0003_delete_category.py  0004_fetchmenu.py  0005_alter_fetchmenu_options.py
backend/backend/: settings.py
backend/config/: celery.py  settings.py  urls.py
backend/main/: admin.py  filters.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
backend/main/migrations/: 0001_initial.py  0002_happyhours.py  0002_remove_product_discount_and_more.py  0003_cart_is_happy_hours_order_is_happy_hours.py  0003_manager_cart_promo_cart_total_amount_and_more.py
backend/main/templates/admin/: get_token_and_fetch_menu.html  (+1 more)
backend/users/: email.py  managers.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_options.py  0004_alter_user_options_alter_user_address_and_more.py
backend/users/templates/: activation_success.html  confirmation.html
frontend/: Dockerfile  index.html
frontend/scripts/: index.js
frontend/styles/: footer.css  header.css  main.css  menu-list.css  modal_windows.css  style.css  variables.css
nginx/: .server.crt  .server.key  Dockerfile  nginx.conf
(+1 files in other folders)
